# rust-webgpu

./: .gitignore  README.md
wgpu/: Cargo.toml
wgpu/src/: lib.rs  main.rs  shader.wgsl
